fix(remove): OnRamp network menu scrollbar

--- a/src/components/SDK/OnRamp/OnRamp.module.scss
+++ b/src/components/SDK/OnRamp/OnRamp.module.scss
@@ -23,7 +23,7 @@
   }
 
   .selectMenu {
-    max-height: unset;
+    max-height: unset!important;
   }
 
   .buttons {
